fix: icon alignment for privacy policy

--- a/src/component/MyAccountOverlay/MyAccountOverlay.style.scss
+++ b/src/component/MyAccountOverlay/MyAccountOverlay.style.scss
@@ -460,6 +460,7 @@
             .privacy_policy_icon {
               display: flex;
               width: 32px;
+              align-items: center;
             }
           }
           .PrivacyTab {
